# cmake-demo

./: CMakeLists.txt  README.md
Demo1/: CMakeLists.txt
Demo2/: CMakeLists.txt  main.cc
Demo3/: CMakeLists.txt
Demo3/math/: CMakeLists.txt
Demo4/: CMakeLists.txt  config.h.in  main.cc
Demo5/: CMakeLists.txt  config.h.in  main.cc
Demo5/math/: CMakeLists.txt
Demo6/: CMakeLists.txt  config.h.in  main.cc
Demo6/math/: CMakeLists.txt
Demo7/: CMakeLists.txt  config.h.in  main.cc
Demo7/math/: CMakeLists.txt
Demo8/: CMakeLists.txt  config.h.in  main.cc
Demo8/math/: CMakeLists.txt
Others/cmakePackageDemo/: README.md  build.sh
Others/cmakePackageDemo/myapp/: CMakeLists.txt  myapp.c
Others/cmakePackageDemo/myapp/build-myapp-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  myapp.cbp
Others/cmakePackageDemo/mylib/: CMakeLists.txt  mylib.c
Others/cmakePackageDemo/mylib/install/include/: mylib.h
Others/cmakePackageDemo/mylib/install/lib/cmake/mylib/: mylib-config.cmake
Others/differentpath/: CMakeLists.txt  main.c
Others/differentpath/hello/: CMakeLists.txt  hello.c  hello.h
Others/differentpath/hello_world/: CMakeLists.txt  hello_world.c  hello_world.h
Others/differentpath/world/: CMakeLists.txt  world.c  world.h
Others/differentpath_base/: CMakeLists.txt  build.sh  main.c
Others/differentpath_base/hello/: CMakeLists.txt  hello.h
Others/differentpath_base/world/: CMakeLists.txt
Others/libhello/: build.sh  hello.c
Others/multiplepath/: CMakeLists.txt
Others/multiplepath/imp/: CMakeLists.txt  main.c
Others/multiplepath/imp/common/inc/: common.h
Others/multiplepath/imp/hello/: CMakeLists.txt
Others/multiplepath/imp/hello/inc/: hello.h
Others/multiplepath/imp/hello/src/: hello.c
Others/multiplepath/imp/hello_world/: CMakeLists.txt
Others/multiplepath/imp/hello_world/inc/: hello_world.h
Others/multiplepath/imp/hello_world/src/: hello_world.c
Others/multiplepath/imp/world/: CMakeLists.txt
Others/multiplepath/imp/world/src/: world.c
Others/samepath/: build.sh  hello.c
