project(webbench)
cmake_minimum_required(VERSION 2.8)

#	创建debug版本
set(CMAKE_BUILD_TYPE "Debug")

#   add module directory
# add_subdirectory(Demo1)
add_subdirectory(Demo1)
add_subdirectory(Demo2)
add_subdirectory(Demo3)
add_subdirectory(Demo4)
add_subdirectory(Demo5)
add_subdirectory(Demo6)
add_subdirectory(Demo7)
add_subdirectory(Demo8)
